Revision history for DBIx::Class

### Unreleased changes from topic branch
    * Fixes
        - Correctly recognize root source unqualified columns when
          resolving right-side ordered limited prefetch

### Unreleased changes merged from master
    * New Features / Changes
        - Officially deprecate the 'cols' and 'include_columns' resultset
          attributes

    * Fixes
        - Audit and correct potential bugs associated with braindead reuse
          of $1 on unsuccessful matches

0.08242-TRIAL (EXPERIMENTAL BETA RELEASE) 2013-03-10 14:44 (UTC)
    * New Features / Changes
        - Prefetch with limit on right-side ordered resultsets now works
          correctly (via aggregated grouping)
        - Changing the result_class of a ResultSet in progress is now
          explicitly forbidden. The behavior was undefined before, and
          would result in wildly differing outcomes depending on $rs
          attributes.
        - Scale back validation of the 'as' attribute - in the field
          there are legitimate-ish uses of a inflating into an apparently
          invalid relationship graph
        - Warn in case of iterative collapse being upgraded to an eager
          cursor slurp
        - No longer order the insides of a complex prefetch subquery,
          unless required to satisfy a limit

    * Fixes
        - Properly consider unselected order_by criteria during complex
          subqueried prefetch
        - Properly support "MySQL-style" left-side group_by with prefetch
        - Fix $grouped_rs->get_column($col)->func($func) producing incorrect
          SQL (RT#81127)

0.08209 2013-03-01 12:56 (UTC)
    * New Features / Changes
        - Debugging aid - warn on invalid result objects created by what
          seems like an invalid inheritance hierarchy

    * Fixes
        - Fix another embarrassing regression preventing correct refining of
          the search criteria on a prefetched relation (broken in 0.08205)